fix scrollbar bug when external mouse is connected

--- a/src/styles/mixins/list.scss
+++ b/src/styles/mixins/list.scss
@@ -46,7 +46,6 @@
   width: 100%;
   padding-left: 16px;
   padding-right: 16px;
-  overflow: scroll;
 }
 
 @mixin list-item-container {
